--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,17 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenCentral()
+        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
 ext {
-    compileSdkVersion = 22
-    buildToolsVersion = "23.0.1"
+    compileSdkVersion = 25
+    buildToolsVersion = "26.0.1"
 
-    minSdkVersion = 9
+    minSdkVersion = 14
     targetSdkVersion = 23
 }
