--- a/Session/build.gradle
+++ b/Session/build.gradle
@@ -26,6 +26,7 @@ android {
 
 dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.parse.bolts:bolts-tasks:1.3.0'
