--- a/Session/build.gradle
+++ b/Session/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '26.0.1'
 
     defaultConfig {
-        applicationId "com.parse.session"
+        applicationId "com.sean.session"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -27,8 +27,8 @@ android {
 dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:support-v4:25.4.0'
     compile 'com.parse.bolts:bolts-tasks:1.3.0'
     compile 'com.parse:parse-android:1.13.0'
     compile 'com.android.support:multidex:1.0.1'
