--- a/Session/src/main/AndroidManifest.xml
+++ b/Session/src/main/AndroidManifest.xml
@@ -15,13 +15,14 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name="com.parse.session.StarterApplication"
+        android:name="com.sean.session.ParseInitializer"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="Session"
         android:theme="@style/Theme.AppCompat.NoActionBar">
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity
-            android:name="com.parse.session.MainActivity"
+            android:name="com.sean.session.MainActivity"
             android:label="Session">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,9 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.parse.session.UserListActivity" />
-        <activity android:name="com.parse.session.FeedActivity" />
-        <activity android:name="com.parse.session.HomeActivity" />
+        <activity android:name="com.sean.session.UserListActivity" />
+        <activity android:name="com.sean.session.FeedActivity" />
+        <activity android:name="com.sean.session.HomeActivity" />
     </application>
 
 </manifest>
